<resources>
    <string name="app_name">EnglishCard</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_card_set_name">Название набора</string>
    <string name="new_card_set_language">Иностранный язык</string>
    <string name="cancel">Отмена</string>
    <string name="create_card_set_message">Создание набора карточек</string>
    <string name="yes">ОК</string>
    <string name="error_card_set_dialog">Поля не могут быть пустыми!</string>
    <string name="card_set_error_dialog">Ошибка! Неверные данные</string>
    <string name="card_front_word">Слово с передней стороны</string>
    <string name="card_back_word">Слово с задней стороны</string>
    <string name="help_text">Нажмите на карточку, чтобы увидеть слово с обратной стороны. Если вы его угадали, то нажмите "Слово выучено". Иначе выберите кнопку "Слово не выучено"</string>
    <string name="button_text_fail">Слово не выучено</string>
    <string name="button_text_success">Слово выучено</string>
    <string name="result_title">Результаты тестирования</string>
    <string name="result_right_answers">Правильных ответов : %s</string>
    <string name="result_wrong_fail">Неправильных ответов : %s</string>
    <string name="result_set_title">Название набора : %s</string>
</resources>