<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/card_container"
    android:layout_marginBottom="16dp"
    android:textSize="16sp"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:textColor="@color/black"
    android:paddingRight="16dp"
    android:id="@+id/help_text"
    android:text="@string/help_text"/>

    <androidx.cardview.widget.CardView
        android:clipChildren="false"
        android:elevation="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/card_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="160dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="4dp"
        android:paddingBottom="24dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_text"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                tools:text="Карточка"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="0dp"
        android:text = "@string/button_text_success"
        android:id="@+id/button_success"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:paddingTop="16dp"
        android:elevation="16dp"
        android:paddingBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/card_container" />

    <TextView
        android:layout_width="0dp"
        android:text = "@string/button_text_fail"
        android:id="@+id/button__fail"
        android:textColor="@color/white"
        android:background="@android:color/holo_red_light"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:paddingTop="16dp"
        android:elevation="16dp"
        android:paddingBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/button_success" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>